k8s/twitter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twitter
  namespace: bird
  labels:
    app: twitter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: twitter
  template:
    metadata:
      labels:
        app: twitter
    spec:
      containers:
        - name: twitter
          image: bird-twitter:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8082
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"

          readinessProbe:
            tcpSocket:
              port: 8082
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8082
            initialDelaySeconds: 60
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: twitter-service
  namespace: bird
  labels:
    app: twitter
spec:
  type: ClusterIP
  ports:
    - port: 8082
      targetPort: 8082
  selector:
    app: twitter
